--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,16 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
+    "react-icons": "^4.3.1",
+    "react-moment": "^1.1.1",
+    "react-quill": "^1.3.5",
+    "react-render-html": "^0.6.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -34,6 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy": "http://localhost:5000"
-
+  },
+  "proxy": "http://localhost:5000"
 }
