--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "homepage": "https://event-management-omega.vercel.app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
