--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.18.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.3.1",
@@ -43,7 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy": "http://localhost:5000"
-
-  
+  },
+  "proxy": "http://localhost:5000"
 }
