--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.1",
     "react-quill": "^1.3.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
@@ -46,6 +47,4 @@
       "last 1 safari version"
     ]
   }
-
-
 }
