--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,14 @@
   "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.0",
+    "jspdf-react": "^1.0.11",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-datepicker": "^4.6.0",
